# tetrav-sales-tracker-desktop

./: .gitignore  bun.lockb  components.json  package.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  error.rs  lib.rs  main.rs
src-tauri/src/accounts/: commands.rs  mod.rs  model.rs  repository.rs  service.rs
src-tauri/src/accounts/individuals/: commands.rs  mod.rs  repository.rs  service.rs
src-tauri/src/accounts/offices/: mod.rs  repository.rs
src-tauri/src/auth/: commands.rs  mod.rs  model.rs  models.rs  service.rs
src-tauri/src/commands/: auth.rs
src-tauri/src/database/: connection.rs  migrations.rs  mod.rs
src-tauri/src/database/migrations/: up.sql
src-tauri/src/features/: mod.rs
src-tauri/src/features/auth/: commands.rs  mod.rs  model.rs  repository.rs  service.rs
src-tauri/src/stations/: mod.rs
src-tauri/src/users/: mod.rs  model.rs  repository.rs  service.rs
src/components/: app-sidebar.tsx  data-table.tsx  nav-main.tsx  nav-projects.tsx  nav-user.tsx  protected-route.tsx  team-switcher.tsx
src/config/: sidebar-config.ts
src/features/accounts/: page.tsx  store.ts  types.ts
src/features/accounts/api/: mutations.ts  queries.ts
src/features/accounts/components/: add-button.tsx  tabs.tsx
src/features/auth/: hook.tsx  login-form.tsx  page.tsx  store.ts  types.ts
src/features/dashboard/: dashboard.tsx  page.tsx
src/hooks/: use-breadcrumb.tsx
src/layouts/: layout.tsx
src/routes/: routes.conf.ts
src/stores/: breadcrumb.store.ts  sidebar.store.ts
(+10 files in other folders)
